<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".BlackBoard">
    <!--Panel con el CircularSeeKBar-->
    <LinearLayout
        android:id="@+id/LayoutSB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/CustomDarkGrey"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lblSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text=" Aberronche "
            android:textAlignment="center"
            android:textColor="@color/CustomWhite"
            android:textSize="26sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <com.asvfactory.asv.doctore.customViews.CircularSeekBar
                android:id="@+id/circularSeekBar1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                asv:circle_progress_color="#67AB73"
                asv:max="20"
                asv:pointer_color="#9E3043"
                asv:pointer_halo_color="#56ab6a"
                asv:pointer_halo_color_ontouch="#56ab6a"
                asv:progress="1" />

            <TextView
                android:id="@+id/txtSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal"
                android:text="1"

                android:textSize="132dp" />
        </FrameLayout>

        <Button
            android:id="@+id/BtnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/res005_Hecho"
            android:textAlignment="gravity"
            android:textSize="26sp" />
    </LinearLayout>
    <!--Tiempos-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:background="@color/CustomDarkGrey"
        android:orientation="vertical">
        <!--Repeticiones-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/CustomDarkGrey"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/res000_repeticiones"
                android:textColor="@color/CustomWhite"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/txtRepe"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:textColor="@color/CustomBlack"
                android:textSize="26dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/CustomBlack"
                android:textSize="26dp" />

            <LinearLayout
                android:id="@+id/lytTotRepe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#66000000"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtTotRepe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:tag="@string/res000_repeticiones"
                    android:text="5"
                    android:textColor="@color/CustomWhite"
                    android:textSize="26sp" />

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_repe_white_clock" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--Aberronche-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/CustomGreen"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/res001_ejercicio"
                    android:textColor="#000"
                    android:textSize="26dp" />

                <LinearLayout
                    android:id="@+id/BtnLyout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtExercise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:tag="@string/res007_Min"
                        android:text="1"
                        android:textColor="@color/CustomWhite"
                        android:textSize="26dp" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@mipmap/ic_white_clock" />

                </LinearLayout>

            </LinearLayout>
            <!--Descanso-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/CustomRed"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/res002_descanso"
                    android:textColor="#000"
                    android:textSize="26dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtRelax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="@string/res007_Min"
                        android:text="1"

                        android:textColor="@color/CustomWhite"
                        android:textSize="26dp" />

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@mipmap/ic_white_clock" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <!--PanelPB-->
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/PanelPB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/CustomGrey">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:indeterminate="false"
            android:max="100"
            android:minHeight="50dp"
            android:minWidth="200dp"
            android:progress="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:text="-"
            android:textColor="@color/CustomWhite"
            android:textSize="52sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@string/res009_Vol"
                android:text="100"
                android:textColor="#fff"
                android:textSize="40dp" />

            <ImageView
                android:id="@+id/imgVol"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_white_vol" />
        </LinearLayout>
    </FrameLayout>
    <!--Boton de comenzar-->
    <Button
        android:id="@+id/BtnStart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1.5"
        android:background="@color/CustomDarkGrey"
        android:text="@string/res003_comienzo"
        android:textSize="26sp" />
</LinearLayout>
